--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,7 @@ configurations.all {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    //noinspection GradleCompatible
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
     testImplementation 'junit:junit:4.12'
@@ -32,25 +31,20 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
     implementation 'com.android.support:cardview-v7:26.1.0'
-
-    def room_version = "1.1.0" // or, for latest rc, use "1.1.1-rc1"
+    def room_version = "1.1.0"
+    // or, for latest rc, use "1.1.1-rc1"
     implementation "android.arch.persistence.room:runtime:$room_version"
     annotationProcessor "android.arch.persistence.room:compiler:$room_version"
-
     def lifecycle_version = "1.1.1"
     // ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:$lifecycle_version"
     annotationProcessor "android.arch.lifecycle:compiler:$lifecycle_version"
-
     implementation 'com.github.curioustechizen.android-ago:library:1.4.0'
-
-    //noinspection GradleCompatible
-    compile 'com.google.firebase:firebase-core:16.0.0'
-
+    compile 'com.google.firebase:firebase-core:16.0.1'
     implementation 'com.google.firebase:firebase-auth:16.0.2'
     implementation 'com.google.android.gms:play-services-auth:15.0.1'
     implementation 'com.google.firebase:firebase-database:16.0.1'
-
     implementation 'com.takisoft.fix:preference-v7:25.3.0.0'
+
 }
 apply plugin: 'com.google.gms.google-services'
